parser-tree-sitter/upstream/grammar.js
    translation_unit: $ => repeat($._top_level_item),

    // Top level items are block items with the exception of the expression statement
    _top_level_item: $ => choice(
      $.function_definition,
      alias($._old_style_function_definition, $.function_definition),
      $.linkage_specification,
      alias($.cplus_block_type_declaration, $.declaration),
      $.declaration,
      $._top_level_statement,
      $.attributed_statement,
      $.type_definition,
      $.cplus_comptime_type_definition,
      $._empty_declaration,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      $.cplus_comptime_declaration,
      $.cplus_comptime_block,
      $.cplus_comptime_conditional,
      $.cplus_comptime_for,
      $.cplus_at_import,
      $.cplus_test_declaration,
      $.cplus_function_declaration,
    ),

    _block_item: $ => choice(
      $.function_definition,
      alias($._old_style_function_definition, $.function_definition),
      $.linkage_specification,
      alias($.cplus_block_type_declaration, $.declaration),
      $.declaration,
      $.statement,
      $.attributed_statement,
      $.type_definition,
      $.cplus_comptime_type_definition,
      $._empty_declaration,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      $.cplus_comptime_declaration,
      $.cplus_comptime_block,
      $.cplus_comptime_conditional,
      $.cplus_comptime_for,
      $.cplus_at_import,
      $.cplus_test_declaration,
    ),

    // Preprocesser

    function_definition: $ => seq(
      optional($.ms_call_modifier),
      $._declaration_specifiers,
      optional($.ms_call_modifier),
      field('declarator', $._declarator),
      field('body', $.compound_statement),
    ),

    declaration: $ => seq(
      $._declaration_specifiers,
      commaSep1(field('declarator', choice(
        seq(
          optional($.ms_call_modifier),
          $._declaration_declarator,
          optional($.gnu_asm_expression),
        ),
        $.init_declarator,
      ))),
      ';',
    ),

    // A block-scope typedef-name function-pointer declaration can otherwise
    // be accepted as a multiplication/call expression because Tree-sitter
    // does not perform C's typedef-name symbol-table disambiguation during
    // parsing. Keep this entry point narrow: broad identifier-led declarations
    // would change the ordinary C ambiguity policy used by the upstream corpus.
    type_definition: $ => seq(
      optional('__extension__'),
      'typedef',
      $._type_definition_type,
      $._type_definition_declarators,
      repeat($.attribute_specifier),
      ';',
    ),
    _type_definition_type: $ => seq(repeat($.type_qualifier), field('type', $.type_specifier), repeat($.type_qualifier)),
    _type_definition_declarators: $ => commaSep1(field('declarator', $._type_declarator)),

    _declaration_specifiers: $ => prec.right(seq(
      repeat($._declaration_modifiers),
      field('type', $.type_specifier),
      repeat($._declaration_modifiers),
    )),

    _declarator: $ => choice(
      $.attributed_declarator,
      $.pointer_declarator,
      $.function_declarator,
      $.array_declarator,
      $.parenthesized_declarator,
      $.cplus_interpolated_identifier,
      $.identifier,
    ),

    _declaration_declarator: $ => choice(
      $.attributed_declarator,
      $.pointer_declarator,
      alias($._function_declaration_declarator, $.function_declarator),
      $.array_declarator,
      $.parenthesized_declarator,
      $.cplus_interpolated_identifier,
      $.identifier,
    ),

    _abstract_declarator: $ => choice(
      $.abstract_pointer_declarator,
      $.abstract_function_declarator,
      $.abstract_array_declarator,
      $.abstract_parenthesized_declarator,
    ),

    parenthesized_declarator: $ => prec.dynamic(PREC.PAREN_DECLARATOR, seq(
      '(',
      optional($.ms_call_modifier),
      $._declarator,
      ')',
    )),
    pointer_declarator: $ => prec.dynamic(1, prec.right(seq(
      optional($.ms_based_modifier),
      '*',
      repeat($.ms_pointer_modifier),
      repeat($.type_qualifier),
      field('declarator', $._declarator),
    ))),
    function_declarator: $ => prec.right(1,
      seq(
        field('declarator', $._declarator),
        field('parameters', $.parameter_list),
        optional($.gnu_asm_expression),
        repeat(choice(
          $.attribute_specifier,
          $.identifier,
          alias($.preproc_call_expression, $.call_expression),
        )),
      ),
    ),

    init_declarator: $ => seq(
      field('declarator', $._declarator),
      '=',
      field('value', choice($.initializer_list, $.expression)),
    ),

    compound_statement: $ => seq(
      '{',
      repeat($._block_item),
      '}',
    ),

    type_qualifier: $ => choice(
      'const',
      'constexpr',
      'volatile',
      'restrict',
      '__restrict__',
      '__extension__',
      '_Atomic',
      '_Noreturn',
      'noreturn',
      '_Nonnull',
      $.alignas_qualifier,
    ),

    primitive_type: _ => token(choice(
      'bool',
      'char',
      'int',
      'float',
      'double',
      'void',
      'size_t',
      'ssize_t',
      'ptrdiff_t',
      'intptr_t',
      'uintptr_t',
      'charptr_t',
      'nullptr_t',
      'max_align_t',
      ...[8, 16, 32, 64].map(n => `int${n}_t`),
      ...[8, 16, 32, 64].map(n => `uint${n}_t`),
      ...[8, 16, 32, 64].map(n => `char${n}_t`),
    )),

    struct_specifier: $ => prec.right(seq(
      'struct',
      optional($.attribute_specifier),
      optional($.ms_declspec_modifier),
      choice(
        seq(
          field('name', $._type_identifier),
          field('body', optional($.field_declaration_list)),
        ),
        field('body', $.field_declaration_list),
      ),
      optional($.attribute_specifier),
    )),

    field_declaration_list: $ => seq(
      '{',
      repeat($._field_declaration_list_item),
      '}',
    ),

    _field_declaration_list_item: $ => choice(
      $.field_declaration,
      $.cplus_method_definition,
      $.cplus_throws_annotated_method,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      alias($.preproc_if_in_field_declaration_list, $.preproc_if),
      alias($.preproc_ifdef_in_field_declaration_list, $.preproc_ifdef),
    ),

    // C-plus methods are kept as an explicit extension node instead of
    // relying on Tree-sitter error recovery to find struct members.
    cplus_method_definition: $ => prec(1, seq(
      optional($.cplus_static_modifier),
      $.cplus_access_modifier,
      $._declaration_specifiers,
      field('declarator', $.cplus_method_declarator),
      field('body', choice($.compound_statement, ';')),
    )),

    cplus_method_declarator: $ => choice(
      seq(optional($.ms_call_modifier), $.function_declarator),
      prec.dynamic(2, seq(
        optional($.ms_call_modifier),
        repeat1(seq('*', repeat(choice($.type_qualifier, $.ms_pointer_modifier)))),
        $.function_declarator
      )),
    ),

    cplus_access_modifier: _ => choice(token(prec(10, 'pub')), token(prec(10, 'priv'))),

    cplus_function_declaration: $ => prec.dynamic(100, seq(
      optional($.cplus_throws_annotation),
      $.cplus_access_modifier,
      $._declaration_specifiers,
      field('declarator', $.cplus_method_declarator),
      field('body', choice($.compound_statement, ';')),
    )),

    cplus_throws_annotation: $ => seq('@', 'throws', '(', optional($.identifier), ')'),

    cplus_throws_annotated_method: $ => seq($.cplus_throws_annotation, $.cplus_method_definition),

    field_declaration: $ => seq(
      $._declaration_specifiers,
      optional(choice($._field_declaration_declarator, $.bitfield_clause)),
      optional($.attribute_specifier),
      ';',
    ),
    _field_declaration_declarator: $ => commaSep1(seq(
      field('declarator', $._field_declarator),
      optional($.bitfield_clause),
    )),

    parameter_list: $ => seq(
      '(',
      choice(
        commaSep(choice($.cplus_parameter_declaration, $.parameter_declaration, $.variadic_parameter)),
        $.compound_statement,
      ),
      ')',
    ),

    cplus_parameter_declaration: $ => prec(1, choice(
      seq(
        repeat1($.cplus_parameter_annotation),
        repeat1($.type_qualifier),
        field('declarator', $.pointer_declarator),
      ),
      seq(
        repeat1($.cplus_parameter_annotation),
        optional(field('type', $._declaration_specifiers)),
        optional(field('declarator', choice($._declarator, $._abstract_declarator))),
      ),
    )),

    cplus_parameter_annotation: _ => choice('borrowed', 'owned', 'mut', 'scratch', 'hot', 'warm', 'cold'),

    cplus_comptime_declaration: $ => choice(
      $.cplus_comptime_function_definition,
      $.cplus_legacy_type_generator,
      $.cplus_legacy_function_generator,
      $.cplus_legacy_comptime_invocation,
      $.cplus_comptime_import,
      $.cplus_comptime_flags,
      $.cplus_comptime_invocation,
      $.cplus_comptime_value,
    ),

    cplus_comptime_function_definition: $ => prec.dynamic(2, seq(
      'comptime',
      field('result_kind', choice('type', 'function', 'variable', 'string', 'code', $.identifier, $.primitive_type)),
      field('name', alias($.cplus_comptime_marked_identifier, $.identifier)),
      '(',
      commaSep(choice($.cplus_generic_type_parameter, $.cplus_comptime_parameter, $.parameter_declaration)),
      ')',
      field('body', $.cplus_comptime_body),
    )),

    // Legacy scalar parameters mark their comptime binding at the name (`int @value`).
    cplus_comptime_body: $ => seq(
      '{',
      repeat(choice($.cplus_comptime_return_declaration, $._block_item)),
      '}',
    ),

    cplus_comptime_return_declaration: $ => choice(
      // A returned runtime function definition is an entity even though it begins with a type.
      prec.dynamic(10, seq('return', $.function_definition)),
      // Keep C declaration-like calls such as `return helper(value);` on the expression path.
      prec.dynamic(1, seq('return', choice(
        $.type_definition,
        $.declaration,
        $.cplus_legacy_returned_function,
      ))),
    ),

    cplus_legacy_returned_function: $ => prec.right(seq('@', 'fn', $.cplus_function_declaration, optional(';'))),

    cplus_comptime_type_definition: $ => prec(3, seq(
      'typedef',
      field('generator', $.cplus_at_call_expression),
      field('alias', $.identifier),
      ';',
    )),

    cplus_generic_type_parameter: $ => seq('type', $.identifier),

    cplus_legacy_generic_type_parameter: $ => seq('@', 'type', $.identifier),

    cplus_legacy_function_generator: $ => seq(
      '@', 'fn', optional('@'), field('name', $.identifier),
      '(', commaSep(choice($.cplus_generic_type_parameter, $.cplus_legacy_generic_type_parameter, $.parameter_declaration)), ')',
      field('body', $.cplus_comptime_body),
    ),

    cplus_legacy_comptime_invocation: $ => prec.dynamic(3, seq(
      '@', field('generator', $.identifier), $.argument_list, ';',
    )),

    cplus_comptime_import: $ => seq('comptime', 'import', optional($.string_literal), ';'),

    // Empty argument lists remain structurally parseable so the compiler can emit a precise
    // semantic diagnostic at the terminating semicolon instead of a whole-directive ERROR node.
    cplus_comptime_flags: $ => seq('comptime', 'flags', repeat(choice(
      $.identifier,
      $.cplus_type_reference,
      $.number_literal,
      $.string_literal,
      '-',
      '=',
    )), ';'),

    cplus_comptime_invocation: $ => seq(
      'comptime',
      optional('typedef'),
      field('generator', $.identifier),
      '(',
      commaSep(choice($.expression, $.cplus_type_argument)),
      ')',
      optional(field('alias', $.identifier)),
      ';',
    ),

    cplus_comptime_value: $ => choice(
      prec(2, seq(
        'comptime',
        field('type', $.type_specifier),
        field('name', alias($.cplus_comptime_marked_identifier, $.identifier)),
        optional(seq('=', $.expression)),
        ';',
      )),
      seq(
        'comptime',
        field('type', $.type_specifier),
        field('name', $.identifier),
        optional(seq('=', $.expression)),
        ';',
      ),
    ),

    cplus_comptime_block: $ => seq('comptime', $.compound_statement),

    cplus_comptime_conditional: $ => prec.right(seq(
      '@', 'if', '(', field('condition', $.expression), ')', field('body', $.compound_statement),
      repeat(seq(
        '@', 'else',
        optional(seq('if', '(', field('condition', $.expression), ')')),
        field('body', $.compound_statement),
      )),
    )),

    cplus_at_import: $ => prec.right(seq(
      '@', 'import',
      optional('('),
      $.string_literal,
      optional(')'),
      optional(';'),
    )),

    cplus_test_declaration: $ => seq(
      '@', 'test',
      choice($.string_literal, $.identifier),
      $.compound_statement,
    ),

    parameter_declaration: $ => seq(
      $._declaration_specifiers,
      optional(field('declarator', choice(
        $._declarator,
        $._abstract_declarator,
      ))),
      repeat($.attribute_specifier),
    ),

    // Statements

    cplus_defer_statement: $ => seq(
      'defer',
      field('body', $.statement),
    ),

    cplus_try_statement: $ => prec.right(seq(
      '@try',
      field('body', $.compound_statement),
      repeat1($.cplus_catch_clause),
    )),

    cplus_catch_clause: $ => seq(
      '@catch', '(',
      choice(
        seq(
          $.identifier,
          repeat(seq('|', $.identifier)),
          ',',
          $.parameter_declaration,
        ),
        $.parameter_declaration,
      ),
      ')',
      field('body', $.compound_statement),
    ),

    expression_statement: $ => seq(
      optional(choice(
        $.expression,
        $.comma_expression,
      )),
      ';',
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $.statement),
      optional(field('alternative', $.else_clause)),
    )),

    return_statement: $ => seq(
      'return',
      optional(choice($.expression, $.comma_expression, $.struct_specifier)),
      ';',
    ),

    cplus_at_call_expression: $ => seq('@', $.identifier, $.argument_list),

    cplus_type_reference: $ => seq('@', $.identifier),

    cplus_interpolated_identifier: $ => prec.right(3, seq(
      repeat(choice($.identifier, $.cplus_at_call_expression)),
      $.cplus_at_call_expression,
      repeat(choice($.identifier, $.cplus_at_call_expression)),
    )),

    cplus_code_fragment: $ => seq('@', 'code', $.compound_statement),

    cplus_comptime_expression: $ => prec(1, seq('comptime', $.expression)),

    conditional_expression: $ => prec.right(PREC.CONDITIONAL, seq(
      field('condition', $.expression),
      '?',
      optional(field('consequence', choice($.expression, $.comma_expression))),
      ':',
      field('alternative', $.expression),
    )),

    _assignment_left_expression: $ => choice(
      $.identifier,
      $.call_expression,
      $.field_expression,
      $.pointer_expression,
      $.subscript_expression,
      $.parenthesized_expression,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._assignment_left_expression),
      field('operator', choice(
        '=',
        '*=',
        '/=',
        '%=',
        '+=',
        '-=',
        '<<=',
        '>>=',
        '&=',
        '^=',
        '|=',
      )),
      field('right', $.expression),
    )),

    pointer_expression: $ => prec.left(PREC.CAST, seq(
      field('operator', choice('*', '&')),
      field('argument', $.expression),
    )),

    argument_list: $ => seq('(', commaSep(choice($.expression, $.compound_statement)), ')'),
